--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="refresh" content="0; url=https://zhangzixuan0124.github.io/lenguajeDeMarcas_Iglesia/iglesia/WebContent/iglesia.html">
+  <title>redireccion</title>
+  </head>
+<body>
+
+
+</body>
+</html>
